Icon, better username/password check, add libraries